packages/ui-library/src/css/buttons.scss
/* ... */
button.button--overflow {
    padding-left: 10px;
    padding-right: 10px;
    &:after {
        content: '';
        display: block;
        width: 3px;
        height: 3px;
        border-radius: 50%;
        background-color: $color-slate;
        box-shadow: 0 -5px 0 $color-slate, 0 5px 0 $color-slate;
    }
    &:hover {
        &:after {
            background-color: $color-active-blue;
            box-shadow: 0 -5px 0 $color-active-blue, 0 5px 0 $color-active-blue;
        }
    }
}
// Consolidates styles for centered group of buttons with optional cancel link
.button-group {
    margin: 25px 0 0;
    text-align: center;
    white-space: nowrap;
    button,
    .button,
    input[type=button] {
        margin: 0 5px;
    }
    a {
        text-transform: none;
        &.secondary {
            color: $color-rhino;
        }
        &.cancel {
            display: inline-block;
            margin-top: 15px;
            font-weight: normal;
        }
    }
}

.tile-button,
button.tile-button {
    background: $color-white;
    border: 1px solid $color-accent-neutral-70;
    color: $color-slate;
    cursor: pointer;
    font-size: 15px;
    padding: $spacing-xl $spacing-lg $spacing-lg $spacing-lg;
    line-height: normal;
    height: auto;
    white-space: normal;

    @include flexbox;
    @include flexbox-direction(column);

    align-items: center;
    justify-content: space-between;
    -ms-flex: 1 1 100%;

    $icon-size: 80px;

    &:hover,
    &:active,
    &.tile-button--selected {
        border-color: $color-active-blue;

        .tile-button__icon {
            color: $color-active-blue;
        }
        .tile-button__icon-container {
            svg {
                fill: $color-active-blue;
            }
        }
    }
    &.tile-button--selected {
        @include box-shadow(0 2px 5px 0 rgba($color-black, 0.2));

        & .tile-button__title {
            @include font-pn-semibold;
        }
    }

    &__details {
        position: relative;
        text-align: left;
        color: $color-neutral-50;
        list-style: none;
        margin-top: $spacing-lg;
        line-height: 1em;

        li {
            margin-bottom: $spacing-xs;

            &:before {
                content: '•';
                position: absolute;
                left: -10px;
            }
            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    &__divider {
        border-top: 1px solid $color-neutral-50;
        margin-top: $spacing-lg;
        width: 100%;
    }

    &__icon {
        font-size: $icon-size;
        color: $color-midnight;
    }
    &__icon-container {
        height: $icon-size;
        width: $icon-size;
        margin-bottom: $spacing-lg;
        display: flex;
        align-items: center;
        justify-content: center;

        &--square {
            margin-bottom: $spacing-md;
        }

        img,
        svg {
            width: auto;
            height: auto;
            max-width: 100%;
            max-height: 100%;
        }
    }

    &__content {
        @include flexbox-grow(1);

        line-height: 1.3em;
        text-align: left;
    }

    &__title {
        color: $color-active-blue;
        font-size: 17px;
        margin-top: $spacing-lg;
        text-transform: uppercase;
        word-break: break-word;

        &--square {
            margin-top: 0;
        }
    }

    &--panel {
        @include arrow(20px);

        &:after {
            bottom: -2%;
            transform: rotate(180deg);
            transform-origin: 25%;
        }
    }

    &--square {
        flex-grow: 0;
        min-height: 165px;
        min-width: 165px;
        padding: 25px;
    }
}

.tile-selector {
    @include flexbox;

    > * {
        @include flexbox-grow(1);
        @include flexbox-shrink(1);
        margin-right: $spacing-md;
        flex-basis: 0;

        &:last-child {
            margin-right: 0;
        }
    }

    &--stacked {
        display: block;

        > * {
            margin-right: 0;
            margin-bottom: $spacing-md;
            width: 100%;

            &:last-child {
                margin-bottom: 0;
            }
        }
    }

    &__group {
        flex-flow: column wrap;
        height: auto;

        &:not(:last-of-type) {
            margin-right: $spacing-xl;
        }

        &--grow-1 {
            @include flexbox-grow(1);
        }

        &--grow-2 {
            @include flexbox-grow(2);
        }

        &--grow-3 {
            @include flexbox-grow(3);
        }

        &--grow-4 {
            @include flexbox-grow(4);
        }

        &--square {
            @include flexbox-grow(0);
            flex-basis: auto;
        }

        &--stacked {
            margin-right: 0;
        }

    }

    &__group-tiles {
        flex: 1;
        margin-top: $spacing-sm;
        width: 100%;

        > * {
            @include flexbox-grow(1);
            @include flexbox-shrink(1);

            margin-right: $spacing-md;
            flex-basis: 0%;
            &:last-child {
                margin-right: 0;
            }
        }

        &--stacked {
            flex-flow: column nowrap;

            > * {
                margin-bottom: $spacing-md;
                margin-right: 0;

                &:last-child {
                    margin-bottom: 0;
                }
            }
        }
    }

    &__group-title {
        color: $color-accent-neutral-40;
        font-size: $font-size-reduced;
        text-transform: uppercase;
        width: 100%;
    }
}
/* ... */

